istio/hello-world-app/helloworld-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
    - "test.app.convoy.com"
  gateways:
    - hello-world-gateway #binding the "gateway" ingress gateway with the vs
  http:
    - route:
        - destination:
            host: hello-world-01.test-ns.svc.cluster.local #cross namespace svc mapping also works
            port:
              number: 80
